# UberSimX

./: README.md
backend/: .gitignore  Cargo.toml
backend/common/: .gitignore  Cargo.toml  events_schema.rs  lib.rs  redis_key_helpers.rs  redis_namespaces.rs  subjects.rs  ws_schema.rs
backend/common/ubersimx-messaging/: README.md
backend/common/ubersimx-messaging/src/: lib.rs  messagingclient.rs  subjects.rs
backend/driver/: .gitignore  Cargo.toml  README.md  README_SETUP_POSTGRES.md
backend/driver/migrations/: 20250829221728_init_schema.sql  20251128172109_driver_status_table.sql
backend/driver/sbin/: init_db.sh
backend/driver/src/: main.rs  models.rs
backend/driver/src/api/: driver.rs  router.rs  ws.rs
backend/driver/src/events/: handlers.rs  publisher.rs  schemas.rs  subscribers.rs
backend/driver/src/infra/repository/: driver_status_repository.rs  vehicle_repository.rs
backend/driver/src/infra/ws/: connections.rs  hub.rs
backend/driver/src/repository/: driver_repository.rs  driver_status_repository.rs  vehicle_repository.rs
backend/driver/src/service/: eta_service.rs  location_update.rs  ride_lifecycle.rs
backend/matcher/: .gitignore  ADR-choosing-NATS-JetStream.md  ADR-choosing-redis.md  Cargo.toml  README.md
backend/matcher/.github/: copilot-instructions.md
backend/matcher/src/: events.rs  main.rs  matcher.rs
backend/matcher/src/api/: router.rs
backend/matcher/src/events/: consumers.rs  handler.rs  producers.rs  schema.rs
backend/matcher/src/matcher/: domain.rs  service.rs  state.rs
backend/rider/: Cargo.toml  README_SETUP_POSTGRESQL.md
backend/rider/migrations/: 20251115200749_create_riders_table.sql  20251115201212_create_rides_table.sql
backend/rider/src/: main.rs  models.rs
backend/rider/src/api/: router.rs
backend/rider/src/repository/: riders_repository.rs  rides_repository.rs
backend/ubersimx-messaging/: .gitignore  Cargo.toml
backend/ubersimx-messaging/src/: subjects.rs
