[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = "0.4.38"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
dotenvy = "0.15.7"
async-trait = "0.1.89"
ubersimx-messaging = { path = "../common/ubersimx-messaging" }
futures-util = "0.3.31"
redis = { version = "0.32.7", features = ["geospatial", "tokio-comp"] }
serde_json = "1.0.145"
common = { path = "../common" }
rand = "0.9.2"
futures = "0.3.31"
