[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.47.1"
ubersimx-messaging = { path = "../ubersimx-messaging" }
uuid = { version = "1.18.1", features = ["serde"] }
